add folder css and styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://kit.fontawesome.com/6d1a4a0b1e.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <!-- <script src="https://kit.fontawesome.com/6d1a4a0b1e.js" crossorigin="anonymous"></script> -->
     <script defer src="js/script.js"></script>
 </head>
 
@@ -27,7 +29,8 @@
                 </nav>
                 <div class="lang">
                     <ul class="lang__list">
-                        <li class="lang__item"><a class="lang__link" href="#">Uk</a></li>
+                        <li class="lang__item"><a class="lang__link" href="#"><i
+                                    class="fa-solid fa-moon-over-sun"></i></a></li>
                         <li class="lang__item active"><a class="lang__link" href="#">Eng</a></li>
                     </ul>
                 </div>
