--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html mode="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://kit.fontawesome.com/6d1a4a0b1e.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <script src="https://kit.fontawesome.com/6d1a4a0b1e.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/6d1a4a0b1e.js" crossorigin="anonymous"></script>
     <script defer src="js/script.js"></script>
 </head>
 
@@ -27,11 +27,14 @@
                         <li class="header__item"><a class="header__link" href="#contacts">Contacts</a></li>
                     </ul>
                 </nav>
-                <div class="lang">
-                    <ul class="lang__list">
-                        <li class="lang__item"><a class="lang__link" href="#"><i
-                                    class="fa-solid fa-moon-over-sun"></i></a></li>
-                        <li class="lang__item active"><a class="lang__link" href="#">Eng</a></li>
+                <div class="mode">
+                    <ul class="mode__list">
+                        <li class="mode__item active">
+
+                            <i class="fa-solid fa-sun"></i>
+
+                        </li>
+                        <li class="mode__item "> <i class="fa-solid fa-moon"></i> </li>
                     </ul>
                 </div>
             </div>
@@ -44,10 +47,14 @@
                     Frontend Developer<br>
                     Ivano-Frankivsk
                 </h2>
-                <div class="lang lang--revers">
-                    <ul class="lang__list">
-                        <li class="lang__item"><a class="lang__link" href="#">Uk</a></li>
-                        <li class="lang__item active"><a class="lang__link" href="#">Eng</a></li>
+                <div class="mode mode--revers">
+                    <ul class="mode__list">
+                        <li class="mode__item  active">
+                            <i class="fa-solid fa-sun"></i>
+                        </li>
+                        <li class="mode__item">
+                            <i class="fa-solid fa-moon"></i>
+                        </li>
                     </ul>
                 </div>
 
