--- a/index.html
+++ b/index.html
@@ -94,34 +94,40 @@
                 </h3>
                 <ul class="skils__list">
                     <li class="skils__item">
-                        <img class="icon-brand" src="images/logo/html.jpg" alt="html">
+                        <i class="icon-brand fa-brands fa-html5"></i>
                         <h4 class="skils__item-title line-clamp">
                             HTML
                         </h4>
                     </li>
                     <li class="skils__item">
-                        <img class="icon-brand" src="images/logo/css.jpg" alt="css">
+                        <i class="icon-brand fa-brands fa-css3-alt"></i>
                         <h4 class="skils__item-title line-clamp">
                             CSS
                         </h4>
                     </li>
                     <li class="skils__item">
-                        <img class="icon-brand" src="images/logo/js.jpg" alt="JS">
+                        <i class="icon-brand fa-brands fa-square-js"></i>
                         <h4 class="skils__item-title line-clamp">
                             JS
                         </h4>
                     </li>
                     <li class="skils__item">
-                        <img class="icon-brand" src="images/logo/scss.webp" alt="scss">
+                        <i class="icon-brand fa-brands fa-sass"></i>
                         <h4 class="skils__item-title line-clamp">
                             SCSS
 
                         </h4>
                     </li>
                     <li class="skils__item">
-                        <img class="icon-brand" src="images/logo/bootstrap.png" alt="scss">
+                        <i class="icon-brand fa-brands fa-bootstrap"></i>
                         <h4 class="skils__item-title line-clamp">
                             Bootstrap
+                        </h4>
+                    </li>
+                    <li class="skils__item">
+                        <i class="icon-brand fa-brands fa-vuejs"></i>
+                        <h4 class="skils__item-title line-clamp">
+                            Vue js
                         </h4>
                     </li>
                 </ul>
@@ -176,30 +182,22 @@
             <ul class="footer__social">
                 <li class="footer__social-item">
                     <a class="footer__social-link" href="#">
-                        <svg class="icon">
-                            <use xlink:href="images/sprite.svg#in"></use>
-                        </svg>
+                        <i class="fa-brands fa-linkedin-in"></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
                     <a class="footer__social-link" href="#">
-                        <svg class="icon">
-                            <use xlink:href="images/sprite.svg#insta"></use>
-                        </svg>
+                        <i class="fa-brands fa-telegram"></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
                     <a class="footer__social-link" href="#">
-                        <svg class="icon">
-                            <use xlink:href="images/sprite.svg#be"></use>
-                        </svg>
+                        <i class="fa-brands fa-whatsapp"></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
                     <a class="footer__social-link" href="#">
-                        <svg class="icon">
-                            <use xlink:href="images/sprite.svg#ball"></use>
-                        </svg>
+                        <i class="fa-brands fa-square-github"></i>
                     </a>
                 </li>
             </ul>
