add new  and delete some images, modified html, css and js files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html mode="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
 
     <header class="header">
         <div class="container">
-            <div class="header__top">
+            <div class="header__top mode-dark">
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__item active"><a class="header__link" href="#">Home</a></li>
@@ -30,9 +30,7 @@
                 <div class="mode">
                     <ul class="mode__list">
                         <li class="mode__item active">
-
                             <i class="fa-solid fa-sun"></i>
-
                         </li>
                         <li class="mode__item "> <i class="fa-solid fa-moon"></i> </li>
                     </ul>
@@ -62,7 +60,10 @@
                     <span class="burger-line"></span>
                 </button>
             </div>
-            <img class="img" src="images/bg.jpg" alt="Picture Front-end">
+            <div class="header__img">
+                <img class="img" src="images/programming-g9a1b090c1_1280.jpg" alt="Picture Front-end">
+            </div>
+
         </div>
     </header>
 
@@ -73,14 +74,14 @@
                 <h2 class="about__title title">About me</h2>
                 <div class="about__content">
                     <p>
-                        Hi, I'm Bohdana – Junior Frontend Developer.
+                        👋 Hi, I'm Bohdana – Junior Frontend Developer.
                     </p>
                     <p>
-                        I'm studying at course "Front-end Web Development" in IT Cluster Academy.
+                        I suppose that a flexibility of thinking, a tendency to self-organization
+                        will help me to realize myself in developing.
                     </p>
                     <p>
-                        I suppose that a sociability, flexibility of thinking, a tendency to self-organization
-                        and the ability to perform routine work will help me to realize myself in this industry.
+                        I am always eager to learn from anyone and everyone.
                     </p>
                 </div>
             </div>
@@ -127,7 +128,7 @@
                     <li class="skils__item">
                         <i class="icon-brand fa-brands fa-vuejs"></i>
                         <h4 class="skils__item-title line-clamp">
-                            Vue js
+                            Vue.js
                         </h4>
                     </li>
                 </ul>
@@ -139,30 +140,9 @@
                 <h2 class="portfolio__title title">Portfolio</h2>
                 <ul class="portfolio__list">
                     <li class="portfolio__item">
-                        <img class="portfolio__img" src="images/works/burger-menu.png"
-                            alt="Photo my work -   Online fashion store - Homepage">
-                        <a class="portfolio__link" href="task_3" target="_blank">
-                            Burger-menu
-                        </a>
-                    </li>
-                    <li class="portfolio__item">
-                        <img class="portfolio__img" src="images/works/metal-band.png"
-                            alt="Photo my work -  Reebok Store - Concept">
-                        <a class="portfolio__link" href="task_4" target="_blank">
-                            Metal Band
-                        </a>
-                    </li>
-                    <li class="portfolio__item">
-                        <img class="portfolio__img" src="images/works/book-shop.png"
-                            alt="Photo my work - Braun Landing Page - Concept">
-                        <a class="portfolio__link" href="task_5" target="_blank">
-                            Book shop
-                        </a>
-                    </li>
-
-                    <li class="portfolio__item">
-                        <a class="portfolio__link" href="task_9" target="_blank">
-                            Company
+                        <img class="portfolio__img" src="images/weather-app.png" alt="Photo my work - Weather-app">
+                        <a class="portfolio__link" href="https://candid-bonbon-8a5a1f.netlify.app/" target="_blank">
+                            Weather-app
                         </a>
                     </li>
                 </ul>
@@ -173,38 +153,30 @@
     <footer class="footer" id="contacts">
         <div class="container">
             <h2 class="footer__title title">
-                Contacts
+                Contacts 📬
             </h2>
             <h3 class="footer__subtitle">
                 Want to know more or just chat? You are welcome!
             </h3>
-            <button class="footer__btn" type="button">Send message</button>
+            <a href="mailto:bogdanalucka@gmail.com" class="footer__btn" type="button">Send message</a>
             <ul class="footer__social">
                 <li class="footer__social-item">
-                    <a class="footer__social-link" href="#">
-                        <i class="fa-brands fa-linkedin-in"></i>
+                    <a class="footer__social-link" href="https://www.linkedin.com/in/bohdana-lutska-28b497244/"
+                        target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a class="footer__social-link" href="#">
+                    <a class="footer__social-link" href="https://t.me/BohdanaLu" target="_blank">
                         <i class="fa-brands fa-telegram"></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a class="footer__social-link" href="#">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a>
-                </li>
-                <li class="footer__social-item">
-                    <a class="footer__social-link" href="#">
+                    <a class="footer__social-link" href="https://github.com/bohdanalu" target="_blank">
                         <i class="fa-brands fa-square-github"></i>
                     </a>
                 </li>
             </ul>
-            <span class="footer__like">
-                Like me on <br>
-                LinkedIn, Instagram, Behance, Dribble
-            </span>
         </div>
     </footer>
 
