--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <meta name="description"
+        content="Bohdana Lutska is a front-end developer based in Ukraine, check out her projects and contact her for job inquiries">
+    <title>Front-end developer - Bohdana Lutska</title>
     <link rel="stylesheet" href="https://kit.fontawesome.com/6d1a4a0b1e.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/6d1a4a0b1e.js" crossorigin="anonymous"></script>
@@ -21,18 +23,22 @@
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__item active"><a class="header__link" href="#">Home</a></li>
-                        <li class="header__item"><a class="header__link" href="#about">About me</a></li>
-                        <li class="header__item"><a class="header__link" href="#skils">Skils</a></li>
-                        <li class="header__item"><a class="header__link" href="#portfolio">Portfolio</a></li>
-                        <li class="header__item"><a class="header__link" href="#contacts">Contacts</a></li>
+                        <li class="header__item"><a class="header__link" title="About Bohdana Lutska"
+                                href="#about">About me</a></li>
+                        <li class="header__item"><a class="header__link" title="Bohdana Lutska's skills"
+                                href="#skils">Skils</a></li>
+                        <li class="header__item"><a class="header__link" title="Bohdana Lutska's portfolio"
+                                href="#portfolio">Portfolio</a></li>
+                        <li class="header__item"><a class="header__link" title="Contact with Bohdana Lutska"
+                                href="#contacts">Contacts</a></li>
                     </ul>
                 </nav>
                 <div class="mode">
                     <ul class="mode__list">
                         <li class="mode__item active">
-                            <i class="fa-solid fa-sun"></i>
+                            <i class="fa-solid fa-sun" aria-label="Light theme"></i>
                         </li>
-                        <li class="mode__item "> <i class="fa-solid fa-moon"></i> </li>
+                        <li class="mode__item "> <i class="fa-solid fa-moon" aria-label="Dark theme"></i> </li>
                     </ul>
                 </div>
             </div>
@@ -48,10 +54,10 @@
                 <div class="mode mode--revers">
                     <ul class="mode__list">
                         <li class="mode__item  active">
-                            <i class="fa-solid fa-sun"></i>
+                            <i class="fa-solid fa-sun" aria-label="Light theme"></i>
                         </li>
                         <li class="mode__item">
-                            <i class="fa-solid fa-moon"></i>
+                            <i class="fa-solid fa-moon" aria-label="Dark theme"></i>
                         </li>
                     </ul>
                 </div>
@@ -61,7 +67,7 @@
                 </button>
             </div>
             <div class="header__img">
-                <img class="img" src="images/programming-g9a1b090c1_1280.jpg" alt="Picture Front-end">
+                <img class="img" src="images/bg.jpg" alt="Picture Front-end">
             </div>
 
         </div>
@@ -158,22 +164,23 @@
             <h3 class="footer__subtitle">
                 Want to know more or just chat? You are welcome!
             </h3>
-            <a href="mailto:bogdanalucka@gmail.com" class="footer__btn" type="button">Send message</a>
+            <a href="mailto:bogdanalucka@gmail.com" class="footer__btn" type="button"
+                title="Send mail to Bogdana Lutska">Send message</a>
             <ul class="footer__social">
                 <li class="footer__social-item">
                     <a class="footer__social-link" href="https://www.linkedin.com/in/bohdana-lutska-28b497244/"
                         target="_blank">
-                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-linkedin" aria-label="Linkedin"></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
                     <a class="footer__social-link" href="https://t.me/BohdanaLu" target="_blank">
-                        <i class="fa-brands fa-telegram"></i>
+                        <i class="fa-brands fa-telegram" aria-label="Telegram"></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
                     <a class="footer__social-link" href="https://github.com/bohdanalu" target="_blank">
-                        <i class="fa-brands fa-square-github"></i>
+                        <i class="fa-brands fa-square-github" aria-label="Github"></i>
                     </a>
                 </li>
             </ul>
