add new item to portfolio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header class="header">
         <div class="container">
-            <div class="header__top mode-dark">
+            <div class="header__top">
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__item active"><a class="header__link" href="#">Home</a></li>
@@ -146,9 +146,29 @@
                 <h2 class="portfolio__title title">Portfolio</h2>
                 <ul class="portfolio__list">
                     <li class="portfolio__item">
+                        <img class="portfolio__img" src="images/flower-design.png"
+                            alt="Photo my work - Flower-design - landing page">
+                        <span class="portfolio__work-name"> Flower design</span>
+                        <a class="portfolio__link" href="https://peppy-crumble-49fde6.netlify.app/" target="_blank">
+                            Vue.js
+                        </a>
+                    </li>
+                    <li class="portfolio__item">
                         <img class="portfolio__img" src="images/weather-app.png" alt="Photo my work - Weather-app">
+                        <span class="portfolio__work-name"> Weather-app</span>
                         <a class="portfolio__link" href="https://candid-bonbon-8a5a1f.netlify.app/" target="_blank">
-                            Weather-app
+                            JS
+                        </a>
+                        <span> /</span>
+                        <a class="portfolio__link" href="https://chipper-fenglisu-be0c9e.netlify.app" target="_blank">
+                            React
+                        </a>
+                    </li>
+                    <li class="portfolio__item">
+                        <img class="portfolio__img" src="images/createx-site.png" alt="Photo my work - Createx-site">
+                        <span class="portfolio__work-name"> Createx</span>
+                        <a class="portfolio__link" href="https://peppy-crumble-49fde6.netlify.app/" target="_blank">
+                            Vue.js
                         </a>
                     </li>
                 </ul>
