do some changin

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                     <li class="portfolio__item">
                         <img class="portfolio__img" src="images/flower-design.png"
                             alt="Photo my work - Flower-design - landing page">
-                        <span class="portfolio__work-name"> Flower design</span>
-                        <a class="portfolio__link" href="https://peppy-crumble-49fde6.netlify.app/" target="_blank">
-                            Vue.js
+
+                        <a class="portfolio__link" href="https://boisterous-yeot-113b44.netlify.app/" target="_blank">
+                            <span class="portfolio__work-name"> Flower design</span>
                         </a>
                     </li>
                     <li class="portfolio__item">
