refactor: change some paddings

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <main>
 
-        <section id="about">
+        <section class="about padding" id="about">
             <div class="container container--small">
                 <h2 class="about__title title">About me</h2>
                 <div class="about__content">
@@ -93,7 +93,7 @@
             </div>
         </section>
 
-        <section id="skils">
+        <section class="skills padding" id="skils">
             <div class="container container--small">
                 <h2 class="skils__title title">Skils</h2>
                 <h3 class="skils__subtitle">
@@ -141,7 +141,7 @@
             </div>
         </section>
 
-        <section id="portfolio">
+        <section class="portfolio padding" id="portfolio">
             <div class="container container--small">
                 <h2 class="portfolio__title title">Portfolio</h2>
                 <ul class="portfolio__list">
@@ -176,7 +176,7 @@
         </section>
 
     </main>
-    <footer class="footer" id="contacts">
+    <footer class="footer padding" id="contacts">
         <div class="container">
             <h2 class="footer__title title">
                 Contacts 📬
