refactor: add aria-label for social links

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <meta name="description"
         content="Bohdana Lutska is a front-end developer based in Ukraine, check out her projects and contact her for job inquiries">
     <title>Front-end developer - Bohdana Lutska</title>
-    <link rel="stylesheet" href="https://kit.fontawesome.com/6d1a4a0b1e.css" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/6d1a4a0b1e.css" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/6d1a4a0b1e.js" crossorigin="anonymous"></script>
-    <script defer src="js/script.js"></script>
 </head>
 
 
@@ -190,23 +188,25 @@
                 <li class="footer__social-item">
                     <a class="footer__social-link" href="https://www.linkedin.com/in/bohdana-lutska-28b497244/"
                         target="_blank">
-                        <i class="fa-brands fa-linkedin" aria-label="Linkedin"></i>
+                        <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
                     <a class="footer__social-link" href="https://t.me/BohdanaLu" target="_blank">
-                        <i class="fa-brands fa-telegram" aria-label="Telegram"></i>
+                        <i class="fa-brands fa-telegram"></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
                     <a class="footer__social-link" href="https://github.com/bohdanalu" target="_blank">
-                        <i class="fa-brands fa-square-github" aria-label="Github"></i>
+                        <i class="fa-brands fa-square-github"></i>
                     </a>
                 </li>
             </ul>
         </div>
     </footer>
 
+    <script src="https://kit.fontawesome.com/6d1a4a0b1e.js" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
